--- a/config/config.json
+++ b/config/config.json
@@ -24,7 +24,7 @@
       "ggally_ggpairs": false,
       "graph_plots": {
         "ids": ["tabu-bge"],
-        "other_graph_types": ["cpdag", "original"],
+        "other_graph_types": ["original", "cpdag"],
         "graphs": true,
         "adjmats": true,
         "diffplots": false,
