--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -168,7 +168,9 @@ for p in Path("workflow/rules/structure_learning_algorithms/").glob("[!.]*"):
 # Include the evaluation modules
 
 for p in Path("workflow/rules/evaluation/").glob("[!.]*"):
-    if (p / "rules.smk").is_file():        
+    if p.name not in config["benchmark_setup"]["evaluation"]:
+        continue
+    if (p / "rules.smk").is_file():
         include: Path("rules/evaluation/", p.name, "rules.smk")
 
 
