--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -155,9 +155,9 @@ for p in Path("workflow/rules/structure_learning_algorithms/").glob("[!.]*"):
                     input:
                         traj=alg_output_seqgraph_path_fine_match(p.name),
                     output:
-                        adjmat=adjmat_estimate_path_mcmc(p.name),  # here is the difference from order_mcmc. matching diffferently.
+                        adjmat=adjmat_estimate_path_mcmc(p.name),  
                     params:
-                        graph_type="chordal",
+                        graph_type="chordal", # not used
                         estimator="{mcmc_estimator}",
                         threshold="{threshold}",
                         burnin_frac="{burnin_frac}",
