--- a/config/config.json
+++ b/config/config.json
@@ -1,45 +1,58 @@
 {
-  "benchmark_setup": {
-    "data": [
-      {
-        "graph_id": "avneigs4_p20",
-        "parameters_id": "SEM",
-        "data_id": "standardized",
-        "seed_range": [1, 3]
-      }
-    ],
-    "evaluation": {
-      "benchmarks": {
-        "filename_prefix": "example/",
-        "show_seed": false,
-        "errorbar": true,
-        "errorbarh": false,
-        "scatter": true,
-        "path": true,
-        "text": false,
-        "ids": ["fges-sem-bic", "tabu-bge", "itsearch-bge", "pc-gaussCItest"]
-      },
-      "graph_true_plots": true,
-      "graph_true_stats": true,
-      "ggally_ggpairs": true,
-      "graph_plots": [
-        "fges-sem-bic",
-        "tabu-bge",
-        "itsearch-bge",
-        "pc-gaussCItest"
+  "benchmark_setup": [
+    {
+      "data": [
+        {
+          "graph_id": "avneigs4_p20",
+          "parameters_id": "SEM",
+          "data_id": "standardized",
+          "seed_range": [
+            1,
+            3
+          ]
+        }
       ],
-      "mcmc_traj_plots": [],
-      "mcmc_heatmaps": [],
-      "mcmc_autocorr_plots": []
+      "evaluation": {
+        "benchmarks": {
+          "filename_prefix": "example/",
+          "show_seed": false,
+          "errorbar": true,
+          "errorbarh": false,
+          "scatter": true,
+          "path": true,
+          "text": false,
+          "ids": [
+            "fges-sem-bic",
+            "tabu-bge",
+            "itsearch-bge",
+            "pc-gaussCItest"
+          ]
+        },
+        "graph_true_plots": true,
+        "graph_true_stats": true,
+        "ggally_ggpairs": true,
+        "graph_plots": [
+          "fges-sem-bic",
+          "tabu-bge",
+          "itsearch-bge",
+          "pc-gaussCItest"
+        ],
+        "mcmc_traj_plots": [],
+        "mcmc_heatmaps": [],
+        "mcmc_autocorr_plots": []
+      },
+      "title": "config"
     }
-  },
+  ],
   "resources": {
     "data": {
       "iid": [
         {
           "id": "standardized",
           "standardized": true,
-          "n": [300]
+          "n": [
+            300
+          ]
         }
       ]
     },
@@ -75,14 +88,25 @@
           "datatype": "continuous",
           "samplePrior": 1,
           "semBicStructurePrior": 1,
-          "penaltyDiscount": [0.75, 0.8, 1, 1.5],
-          "timeout": null
+          "penaltyDiscount": [
+            0.75,
+            0.8,
+            1,
+            1.5
+          ],
+          "timeout": null,
+          "edgeConstraints": null
         }
       ],
       "pcalg_pc": [
         {
           "id": "pc-gaussCItest",
-          "alpha": [0.001, 0.01, 0.05, 0.1],
+          "alpha": [
+            0.001,
+            0.01,
+            0.05,
+            0.1
+          ],
           "NAdelete": true,
           "mmax": "Inf",
           "u2pd": "relaxed",
@@ -93,7 +117,8 @@
           "numCores": 1,
           "verbose": false,
           "indepTest": "gaussCItest",
-          "timeout": null
+          "timeout": null,
+          "edgeConstraints": null
         }
       ],
       "bnlearn_tabu": [
@@ -101,13 +126,19 @@
           "id": "tabu-bge",
           "score": "bge",
           "iss": 1,
-          "issmu": [0.0001, 0.001, 0.01, 0.05],
+          "issmu": [
+            0.0001,
+            0.001,
+            0.01,
+            0.05
+          ],
           "issw": null,
           "l": 5,
           "k": 1,
           "prior": "uniform",
           "beta": 1,
-          "timeout": null
+          "timeout": null,
+          "edgeConstraints": null
         }
       ],
       "bidag_itsearch": [
@@ -121,14 +152,19 @@
           "scoretype": "bge",
           "chi": null,
           "edgepf": 2,
-          "am": [0.01, 0.1, 1],
+          "am": [
+            0.01,
+            0.1,
+            1
+          ],
           "aw": null,
           "softlimit": 9,
           "hardlimit": 14,
           "alpha": 0.01,
           "gamma": 1,
           "cpdag": false,
-          "mergetype": "skeleton"
+          "mergetype": "skeleton",
+          "edgeConstraints": null
         }
       ]
     }
