--- a/config/configdocs.json
+++ b/config/configdocs.json
@@ -1,76 +1,97 @@
 {
-  "benchmark_setup": {
-    "data": [
-      {
-        "graph_id": "alarm.csv",
-        "parameters_id": "SEM",
-        "data_id": "standardized",
-        "seed_range": [1, 3]
-      }
-    ],
-    "evaluation": {
-      "benchmarks": {
-        "filename_prefix": "docs/",
-        "show_seed": false,
-        "errorbar": true,
-        "errorbarh": false,
-        "scatter": true,
-        "path": true,
-        "text": false,
-        "ids": ["fges-sem-bic", "itsearch-bge"]
+  "benchmark_setup": [
+    {
+      "data": [
+        {
+          "graph_id": "alarm.csv",
+          "parameters_id": "SEM",
+          "data_id": "standardized",
+          "seed_range": [
+            1,
+            3
+          ]
+        }
+      ],
+      "evaluation": {
+        "benchmarks": {
+          "filename_prefix": "docs/",
+          "show_seed": false,
+          "errorbar": true,
+          "errorbarh": false,
+          "scatter": true,
+          "path": true,
+          "text": false,
+          "ids": [
+            "fges-sem-bic",
+            "itsearch-bge"
+          ]
+        },
+        "graph_true_plots": false,
+        "graph_true_stats": true,
+        "ggally_ggpairs": false,
+        "graph_plots": [],
+        "mcmc_traj_plots": [
+          {
+            "id": "omcmc",
+            "burn_in": 0,
+            "thinning": 1,
+            "functional": [
+              "score",
+              "size"
+            ],
+            "active": true
+          },
+          {
+            "id": "bdgraph",
+            "burn_in": 0,
+            "thinning": 1,
+            "functional": [
+              "score",
+              "size"
+            ],
+            "active": false
+          }
+        ],
+        "mcmc_heatmaps": [
+          {
+            "id": "omcmc",
+            "burn_in": 0.5,
+            "active": true
+          },
+          {
+            "id": "bdgraph",
+            "burn_in": 0,
+            "active": false
+          }
+        ],
+        "mcmc_autocorr_plots": [
+          {
+            "id": "omcmc",
+            "burn_in": 0,
+            "thinning": 1,
+            "lags": 50,
+            "functional": [
+              "score",
+              "size"
+            ],
+            "active": true
+          },
+          {
+            "id": "bdgraph",
+            "burn_in": 0,
+            "thinning": 1,
+            "lags": 50,
+            "functional": [
+              "score",
+              "size"
+            ],
+            "active": false
+          }
+        ]
       },
-      "graph_true_plots": false,
-      "graph_true_stats": true,
-      "ggally_ggpairs": false,
-      "graph_plots": [],
-      "mcmc_traj_plots": [
-        {
-          "id": "omcmc",
-          "burn_in": 0,
-          "thinning": 1,
-          "functional": ["score", "size"],
-          "active": true
-        },
-        {
-          "id": "bdgraph",
-          "burn_in": 0,
-          "thinning": 1,
-          "functional": ["score", "size"],
-          "active": false
-        }
-      ],
-      "mcmc_heatmaps": [
-        {
-          "id": "omcmc",
-          "burn_in": 0.5,
-          "active": true
-        },
-        {
-          "id": "bdgraph",
-          "burn_in": 0,
-          "active": false
-        }
-      ],
-      "mcmc_autocorr_plots": [
-        {
-          "id": "omcmc",
-          "burn_in": 0,
-          "thinning": 1,
-          "lags": 50,
-          "functional": ["score", "size"],
-          "active": true
-        },
-        {
-          "id": "bdgraph",
-          "burn_in": 0,
-          "thinning": 1,
-          "lags": 50,
-          "functional": ["score", "size"],
-          "active": false
-        }
-      ]
+      "title": "configdocs"
     }
-  },
+  ],
   "resources": {
     "data": {
       "gcastle_iidsim": [
@@ -80,19 +101,25 @@
           "method": "linear",
           "sem_type": "gauss",
           "noise_scale": 1.0,
-          "n": [100]
+          "n": [
+            100
+          ]
         }
       ],
       "iid": [
         {
           "id": "standardized",
           "standardized": true,
-          "n": [300]
+          "n": [
+            300
+          ]
         },
         {
           "id": "nonstandardized",
           "standardized": false,
-          "n": [300]
+          "n": [
+            300
+          ]
         }
       ]
     },
@@ -109,7 +136,10 @@
         {
           "id": "avneigs4_p20",
           "max_parents": 5,
-          "n": [6, 20],
+          "n": [
+            6,
+            20
+          ],
           "d": 4,
           "par1": null,
           "par2": null,
@@ -137,7 +167,7 @@
         {
           "id": "gwi",
           "b": 3,
-          "threshold_conv": 1e-8
+          "threshold_conv": 1e-08
         }
       ]
     },
@@ -146,30 +176,50 @@
         {
           "id": "prec",
           "timeout": null,
-          "thresh": [0.25, 0.5, 0.75]
+          "thresh": [
+            0.25,
+            0.5,
+            0.75
+          ]
         }
       ],
       "corr_thresh": [
         {
           "id": "cov",
           "timeout": null,
-          "thresh": [0.25, 0.5, 0.75]
+          "thresh": [
+            0.25,
+            0.5,
+            0.75
+          ]
         }
       ],
       "bdgraph": [
         {
           "id": "bdgraph",
           "method": "ggm",
-          "algo": ["rjmcmc"],
+          "algo": [
+            "rjmcmc"
+          ],
           "iter": 1000,
           "gprior": 0.5,
           "dfprior": 3,
           "gstart": "empty",
           "timeout": null,
-          "mcmc_seed": [1],
+          "mcmc_seed": [
+            1
+          ],
           "thresh": 0.5,
-          "mcmc_estimator": ["threshold"],
-          "threshold": [0.3, 0.6, 0.7, 0.8, 0.85],
+          "mcmc_estimator": [
+            "threshold"
+          ],
+          "threshold": [
+            0.3,
+            0.6,
+            0.7,
+            0.8,
+            0.85
+          ],
           "burnin_frac": 0.3
         }
       ],
@@ -182,7 +232,11 @@
           "chi": null,
           "edgepf": null,
           "aw": null,
-          "am": [0.01, 0.1, 0.05],
+          "am": [
+            0.01,
+            0.1,
+            0.05
+          ],
           "alpha": 0.01,
           "gamma": 1,
           "stepsave": null,
@@ -190,7 +244,11 @@
           "MAP": true,
           "cpdag": false,
           "timeout": null,
-          "mcmc_seed": [1, 2, 3],
+          "mcmc_seed": [
+            1,
+            2,
+            3
+          ],
           "threshold": 0.5,
           "mcmc_estimator": "threshold",
           "burnin_frac": 0.5,
@@ -206,11 +264,15 @@
           "gap_limit": null,
           "plot": false,
           "palim": 2,
-          "alpha_mu": [0.1, 1.0],
+          "alpha_mu": [
+            0.1,
+            1.0
+          ],
           "alpha_omega_minus_nvars": 2,
           "alpha": null,
           "prune": true,
-          "timeout": null
+          "timeout": null,
+          "edgeConstraints": null
         }
       ],
       "bidag_itsearch": [
@@ -224,7 +286,11 @@
           "scoretype": "bge",
           "chi": null,
           "edgepf": 2,
-          "am": [0.01, 0.1, 1],
+          "am": [
+            0.01,
+            0.1,
+            1
+          ],
           "aw": null,
           "softlimit": 9,
           "hardlimit": 14,
@@ -263,7 +329,12 @@
           "datatype": "continuous",
           "samplePrior": 1,
           "semBicStructurePrior": 1,
-          "penaltyDiscount": [0.75, 0.8, 1, 1.5],
+          "penaltyDiscount": [
+            0.75,
+            0.8,
+            1,
+            1.5
+          ],
           "timeout": null,
           "edgeConstraints": "none.json"
         }
@@ -271,7 +342,10 @@
       "pcalg_pc": [
         {
           "id": "pc",
-          "alpha": [0.001, 0.01],
+          "alpha": [
+            0.001,
+            0.01
+          ],
           "NAdelete": true,
           "mmax": "Inf",
           "u2pd": "relaxed",
@@ -291,7 +365,10 @@
           "id": "tabu-bge",
           "score": "bge",
           "iss": 1,
-          "issmu": [0.0001, 0.001],
+          "issmu": [
+            0.0001,
+            0.001
+          ],
           "issw": null,
           "l": 5,
           "k": 1,
