--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -7,6 +7,7 @@ import shutil
 import filecmp
 from pathlib import Path
 import os
+import random
 
 include: "rules/helper_functions.py"
 
@@ -74,6 +75,18 @@ for p in Path("workflow/rules/evaluation/").iterdir():
     }
 
 
+# Yes this is a hack. But it works probably. Any better ideas?
+# Generate random hash for the temporary schema file
+tmp_hash = random.getrandbits(128)
+tmp_schema = f"schemas/tmp.config.schema_{tmp_hash}.json"
+with open("workflow/"+tmp_schema, "w") as outfile:
+    outfile.write(json.dumps(schema, indent=4))
+
+snakemake.utils.validate(config, tmp_schema)
+
+# remove the temporary schema file
+os.remove("workflow/"+tmp_schema)
+
 
 include: "rules/docker_images.smk"
 
@@ -82,22 +95,10 @@ container: docker_image("benchmark")
 rule all:
     input:
         get_active_rules,
-        #"workflow/schemas/tmp.config.schema.json"
 
+# import random to generate a random number
+import random
 
-# This is to avoid regenerating the schema every time when running snakemake
-# with muliple cores.
-rule generate_config_schema:                    
-    input:
-        configfilename # maybe it should be triggered byt the module folders or something
-    output:
-        "workflow/schemas/tmp.config.schema.json"
-    run:
-        with open("workflow/schemas/tmp.config.schema.json", "w") as outfile:
-            outfile.write(json.dumps(schema, indent=4))
-
-
-snakemake.utils.validate(config, "schemas/tmp.config.schema.json")
 
 # Read which modules are MCMC module (have graphtraj output).
 mcmc_modules = []
