--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -175,11 +175,16 @@ for p in Path("workflow/rules/evaluation/").glob("[!.]*"):
         elif (p / "rule.smk").is_file():
             include: Path("rules/evaluation/", p.name, "rule.smk")
 
+# This one should thake the dataset as well, just to be able to
+# ignore constrains including variables not in the dataset.
+# Amaaybe inclue alg_input_data() in the path somehow?
 rule convert_edge_constraints:
     input:
-        edgeConstraints="resources/constraints/{edgeConstraints}"
+        edgeConstraints="resources/constraints/{edgeConstraints}",
+        data=alg_input_data()
     output:
-        edgeConstraints_in_format="resources/constraints/{edgeConstraints}-{package}"
+        #edgeConstraints_in_format="resources/constraints/{edgeConstraints}-{package}"
+        edgeConstraints_in_format=temp("resources/constraints/data=/"+alg_input_data()+"/{edgeConstraints}-{package}")
     wildcard_constraints:
         edgeConstraints=r".*\.json"
     params:
