This commit was to fix an error with tcp, but it appeared to be in tcp, so it might not be needed.

--- a/workflow/rules/structure_learning_algorithms/bips_tpc/Dockerfile
+++ b/workflow/rules/structure_learning_algorithms/bips_tpc/Dockerfile
@@ -7,3 +7,5 @@ RUN apt install cmake -y
 RUN apt-get install libgsl-dev -y
 RUN R -e 'library(remotes); install_github("bips-hb/micd", ref="3babeb0")'
 RUN R -e 'library(remotes); install_version("ranger", version="0.17.0")'
+
+RUN R -e 'library(remotes); install_github("amices/mice", ref="v3.17.0")'
