more docs and example

--- a/workflow/rules/structure_learning_algorithms/pyagrum/config.json
+++ b/workflow/rules/structure_learning_algorithms/pyagrum/config.json
@@ -1,7 +1,7 @@
 {
   "benchmark_setup": [
     {
-      "title": "pyagrum_config",
+      "title": "pyagrum_demo",
       "data": [
         {
           "graph_id": "avneigs4",
